Add docs specific SCSS pipeline

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -11,6 +11,7 @@
         <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="/c4s-forms.css?v={{ VERSION | slug }}" rel="stylesheet">
+        <link href="docs/stylesheets/main.css?v={{ VERSION | slug }}" rel="stylesheet">
         <script defer="defer" src="/js/main.js?v={{ VERSION | slug }}"></script>
     </head>
     <body class="sans-serif">
