Add initial custom .radio-button styling

--- a/docs/pages/test.njk
+++ b/docs/pages/test.njk
@@ -12,6 +12,44 @@
     <div class="container center p3">
         <h2 id="forms">Forms</h2>
         <form>
+            <h3>Radio buttons</h3>
+
+            <div class="mt5-between">
+                <label class="db mt3-between">
+                    <input type="radio">
+                    Radio in label
+                </label>
+
+                <label class="db mt3-between">
+                    <input
+                        type="radio"
+                        class="radio-button"
+                        name="radio-button-custom"
+                        checked
+                    >
+                    Radio in label with radio-button class
+                </label>
+
+                <label class="db mt3-between">
+                    <input
+                        type="radio"
+                        class="radio-button"
+                        name="radio-button-custom"
+                        style="--radio-button-color: red;"
+                    >
+                    Radio in label with radio-button class
+                </label>
+
+                <label class="db mt3-between">
+                    <input
+                        type="radio"
+                        class="radio-button"
+                        name="radio-button-custom"
+                    >
+                    Radio in label with radio-button class
+                </label>
+            </div>
+
             <h3>Button group</h3>
 
             <div class="measure-wide center mt5-between">
