--- a/src/modules/_forms.scss
+++ b/src/modules/_forms.scss
@@ -8,10 +8,14 @@
 @use '../variables';
 @use 'sass:map';
 @use 'sass:color';
+@use 'sass:math';
 
 $color: map.get(variables.$colors, 'blue');
+$background-color: white;
+
 $check-data-url: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='64' d='M416 128L192 384l-96-96'/%3E%3C/svg%3E";
 $button-group-border-radius: .5rem;
+$radio-button-size: 20px;
 
 @if not $color {
   $color: #357edd;
@@ -37,6 +41,25 @@ $button-group-border-radius: .5rem;
 
     &:focus::before {
       outline: .125rem solid color.scale($color, $lightness: 50%);
+    }
+  }
+
+  .radio-button {
+    width: $radio-button-size;
+    height: $radio-button-size;
+    padding: 0;
+    border: 1px solid var(--radio-button-color, $color);
+    outline: none;
+    vertical-align: middle;
+    appearance: none;
+    border-radius: 50%;
+    transition: all .3s ease-in-out;
+
+    box-shadow: inset 0 0 0 math.div($radio-button-size, 5) var(--radio-button-background-color, $background-color);
+    background-color: var(--radio-button-background-color, $background-color);
+
+    &:checked {
+      background-color: var(--radio-button-color, $color);
     }
   }
 
