--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -368,8 +368,10 @@ $border-radius-levels: (
   '2':        $border-radius-base * functions.nth-power-of-two(-2),
   '3':        $border-radius-base * functions.nth-power-of-two(-1),
   '4':        $border-radius-base,
+  '5':        $border-radius-base * functions.nth-power-of-two(1),
+  '6':        $border-radius-base * functions.nth-power-of-two(2),
   '-100':     100%,
-  '-pill':    99999px,
+  '-pill':    9999999px,
   '--top':    (bottom-right: 0, bottom-left: 0),
   '--right':  (top-left: 0, bottom-left: 0),
   '--bottom': (top-right: 0, top-left: 0),
