--- a/src/modules/_grid.scss
+++ b/src/modules/_grid.scss
@@ -34,11 +34,16 @@
 
   #{functions.construct-class-name($global-prefix, column-gap, $media)} {
     --column-gap: 1rem;
-
     column-gap: var(--column-gap);
   }
 
   #{functions.construct-class-name($global-prefix, row-gap, $media)} {
-    row-gap: 1rem;
+    --row-gap: 1rem;
+    row-gap: var(--row-gap);
+  }
+
+  #{functions.construct-class-name($global-prefix, gap, $media)} {
+    --gap: 1rem;
+    gap: var(--gap);
   }
 }
