Fix REUSE lint problems

--- a/docs/stylesheets/main.scss
+++ b/docs/stylesheets/main.scss
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2024 Cas Dijkman
+ *
+ * SPDX-License-Identifier: GPL-3.0-only
+ */
+
 .noop {
   /*! prevent empty stylesheet lint error ¯\_(ツ)_/¯ */
 }
