--- a/src/_functions.scss
+++ b/src/_functions.scss
@@ -7,6 +7,8 @@
 @use 'sass:math';
 @use 'sass:meta';
 @use 'sass:list';
+@use 'sass:color';
+@use 'sass:map';
 
 @function power($number, $exponent) {
   $value: 1;
@@ -96,4 +98,37 @@
 
 @function construct-class-name($list...) {
   @return '.' + list-to-dash-separated-string($list);
+}
+
+/*
+   Returns the luminance of `$color` as a float between 0 and 1;
+   1 is pure white, 0 is pure black
+
+   @param {Color} $color - Color
+   @return {Number}
+   @link http://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef Reference
+   @link https://css-tricks.com/snippets/sass/luminance-color-function/ Function source
+ */
+@function relative-luminance($color) {
+  $colors: (
+    'red': color.channel($color, "red", $space: rgb),
+    'green': color.channel($color, "green", $space: rgb),
+    'blue': color.channel($color, "blue", $space: rgb)
+  );
+
+  @each $name, $value in $colors {
+    $adjusted: 0;
+    $value: math.div($value, 255);
+
+    @if $value < 0.0393 {
+      $value: math.div($value, 12.92);
+    } @else {
+      $value: math.div(($value + .055), 1.055);
+      $value: math.pow($value, 2.4);
+    }
+
+    $colors: map.merge($colors, ($name: $value));
+  }
+
+  @return (map.get($colors, 'red') * .2126) + (map.get($colors, 'green') * .7152) + (map.get($colors, 'blue') * .0722);
 }
